--- a/Module_5/Module_5.csproj
+++ b/Module_5/Module_5.csproj
@@ -106,8 +106,13 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Исходные изображения\" />
+    <Resource Include="Исходные изображения\Фон.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Исходные изображения\Кнопка-добавление.png" />
+    <Resource Include="Исходные изображения\Панель-задач.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.9.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.9.0\build\MaterialDesignThemes.targets')" />
