--- a/Module_5/Module_5.csproj
+++ b/Module_5/Module_5.csproj
@@ -106,7 +106,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Исходные изображения\Кнопка-закрытия.png" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Исходные изображения\Фон.png" />
   </ItemGroup>
