Добавлено по двойному щелчку правой мыши диалоговое онко подтверждение выполненной задачи. Добавлена проверка на выполненную задачу.

--- a/Module_5/Module_5.csproj
+++ b/Module_5/Module_5.csproj
@@ -116,6 +116,9 @@
     <Resource Include="Исходные изображения\Кнопка-добавление.png" />
     <Resource Include="Исходные изображения\Панель-задач.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Исходные изображения\Выполненная-задача.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.9.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.9.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
