--- a/Module_5/Module_5.csproj
+++ b/Module_5/Module_5.csproj
@@ -119,6 +119,9 @@
   <ItemGroup>
     <Resource Include="Исходные изображения\Выполненная-задача.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Исходные изображения\Логотип.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.9.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.9.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
